# mlflow1only

./: .gitignore  README.md  mlflow_just_started.py  pyproject.toml
mlflow1only/Scripts/: activate  activate.bat
mlruns/0/: meta.yaml
mlruns/0/0fd6899643e1471c8b7a4d74f95fbdb9/: meta.yaml
mlruns/0/0fd6899643e1471c8b7a4d74f95fbdb9/tags/: mlflow.runName
mlruns/0/33cdc34ec55b4026ad0a92320ec65307/: meta.yaml
mlruns/0/33cdc34ec55b4026ad0a92320ec65307/tags/: mlflow.runName
mlruns/945166088460815306/: meta.yaml
mlruns/945166088460815306/1d90fd1af0214d3daa27dbc05e246acc/: meta.yaml
mlruns/945166088460815306/1d90fd1af0214d3daa27dbc05e246acc/tags/: mlflow.log-model.history  mlflow.runName
mlruns/945166088460815306/53b5bff7471a4b3f8c22a42a291bfda7/: meta.yaml
mlruns/945166088460815306/53b5bff7471a4b3f8c22a42a291bfda7/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
mlruns/945166088460815306/8c8c784fa2ef4e5896f01112fdba9f4d/: meta.yaml
mlruns/945166088460815306/8c8c784fa2ef4e5896f01112fdba9f4d/tags/: mlflow.log-model.history  mlflow.runName
mlruns/945166088460815306/daeeb8ac3def42a0940250796d572d0f/: meta.yaml
mlruns/945166088460815306/daeeb8ac3def42a0940250796d572d0f/tags/: mlflow.runName
mlruns/945166088460815306/datasets/9c00d47180b02bd71670c5e9f69a8b59/: meta.yaml
mlruns/945166088460815306/dc57615d021b4b9199e1d992f856035c/: meta.yaml
mlruns/945166088460815306/e9bb71e3c6d94df4a815fc48f83786eb/: meta.yaml
src/: __init__.py
src/mlflow_project/: __init__.py  mlflow_deep_learning_basic.py
(+126 files in other folders)
