# create a simple machine learning and MLflow requirements file 
[tool.poetry]
name = "mlflow-project"
version = "0.1.0"
description = "Machine Learning project with MLflow"

[[tool.poetry.packages]]
include = "mlflow_project" # This should match the folder name inside 'src/'
from = "src"


[tool.poetry.dependencies]
python = "^3.8"
mlflow = "^2.3.0"
scikit-learn = "^1.0"
pandas = "^1.5.0"
numpy = "^1.23.0"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"
jupyter = "^1.0.0"
python-dotenv = "^1.0.0"
setuptools = "^68.0.0"
wheel = "^0.40.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"